# CyberGuard-V2.0

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
cyberguard/: __init__.py  __main__.py  core.py
scripts/: install.ps1  install.sh
tests/: test_basic.py
