[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "cyberguard"
version     = "2.0.0"
description = "CyberGuard v2.0 — Forensic Triage Assistant (human-in-the-loop, privacy-aware, threat-intel enabled)"
readme      = "README.md"
license     = { text = "MIT" }
requires-python = ">=3.9"

keywords = ["security", "forensics", "triage", "threat-intelligence", "malware-detection"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "psutil>=5.9",
]

[project.optional-dependencies]
# Install with:  pip install cyberguard[full]
full = [
    "psutil>=5.9",
    "requests>=2.28",   # nicer HTTP calls (urllib fallback built-in)
]

[project.scripts]
# Installs the `cyberguard` CLI command
cyberguard = "cyberguard.core:main"

[project.urls]
Homepage   = "https://github.com/YOUR_USERNAME/cyberguard"
Repository = "https://github.com/YOUR_USERNAME/cyberguard"
Issues     = "https://github.com/YOUR_USERNAME/cyberguard/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["cyberguard*"]

[tool.setuptools.package-data]
cyberguard = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v"
